2013-12-20  Kaz Kylheku  <kaz@kylheku.com>

	Fixing a bug and performance issue.

	Problem: we are using sigsetjmp but with a jmp_buf structure;
	it requires sigjmp_buf!

	Performance issue: sigsetjmp is a dog which makes system calls.
	Solution: let's roll our own cached version of sigprocmask which
	only calls the real sigprocmask when the mask changes. Then
	our extended_setjmp will just use regular setjmp, plus our own
	custom signal saving and restoring based on the cached version.

	* signal.c (sig_blocked_cache): New variable.
	(set_sig_handler): Use our sig_mask instead of sigprocmask.
	(mem_set_bits, mem_clr_bits): New static functions.
	(sig_mask): New function.

	* signal.h (extended_jmp_buf): New member, blocked.
	(extended_setjmp): save blocked signals by peeking into
	sig_blocked_cache, and restore using sig_mask.
	(sig_blocked_cache, sig_mask): Declared.

2013-12-17  Kaz Kylheku  <kaz@kylheku.com>

	Version 72

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2013-12-17  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (stdio_seek): Bugfix. Was returning current position
	whenever offset is zero, regardless of whence argument.

2013-12-17  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (yybadtoken): Handle HASH_H.

2013-12-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_defvar): Fix the semantics to be similar to Common Lisp:
	no effect if the variable already exists.

	* txr.1: Documented defvar and lisp-parse.

2013-12-16  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (intern): fix the previous diagnostic bug once more with more
	feeling.

	* parser.l (grammar): Recognize package prefixes in symbol tokens.
	Got rid of special rule for handling lone colon.

	* parser.y (sym_helper): Catch undefined package as a parsing 
	error rather allowing intern function to throw exception.

2013-12-15  Kaz Kylheku  <kaz@kylheku.com>

	Changing the tokenizer to get rid of IDENT, KEYWORD and METAVAR